fixes #263 nlp admin: status glitch on firefox

--- a/nlp/admin/web/src/app/sentences-scroll/sentences-scroll.component.css
+++ b/nlp/admin/web/src/app/sentences-scroll/sentences-scroll.component.css
@@ -39,6 +39,7 @@
 .status {
   border-radius: 25px;
   padding: 8px;
+  white-space: nowrap;
 }
 
 .md-column-select {
